# openclaw-harness

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  harness-launcher.sh
.github/workflows/: ci.yml
clawdbot-plugin/: README.md  clawdbot.plugin.json  index.js  openclaw.plugin.json  package.json
config/: default.yaml  openclaw-harness.yaml  rules.yaml  rules.yaml.bak  safebot.yaml
demo/: demo.tape  run_demo.sh
docs/: ARCHITECTURE.md  MIGRATION-LOG.md
openclaw-plugin/: MOVED.md  README.md  index.js  openclaw.plugin.json  package.json
src/: lib.rs  main.rs
src/analyzer/: mod.rs  risk_scorer.rs  rule_engine.rs
src/brain/: mod.rs
src/campaign/: mod.rs
src/cli/: logs.rs  mod.rs  patch.rs  proxy.rs  rules.rs  start.rs  status.rs  stop.rs  test.rs  tui.rs
src/collectors/: claude_code.rs  cursor.rs  mod.rs  moltbot.rs  openclaw.rs
src/db/: mod.rs
src/enforcer/: alerter.rs  mod.rs
src/patcher/: clawdbot.rs  mod.rs
src/proxy/: config.rs  interceptor.rs  mod.rs  streaming.rs
src/rules/: mod.rs
src/web/: mod.rs  routes.rs  ws.rs
tests/: brain_query_api_integration.rs  campaign_engine_integration.rs  ontology_integration.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: Layout.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/lib/: api.ts
ui/src/pages/: Brain.tsx  Dashboard.tsx  Events.tsx  Rules.tsx  Settings.tsx
