[package]
name = "openclaw-harness"
version = "0.2.0"
edition = "2021"
authors = ["Sean <sparkishy@gmail.com>"]
description = "Security harness for AI coding agents"
license = "BSL-1.1"
repository = "https://github.com/sparkishy/openclaw-harness"
keywords = ["ai", "security", "monitoring", "openclaw", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# File system watching
notify = "6.1"

# Regex for rule matching
regex = "1.10"

# HTTP client for alerts
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Async trait
async-trait = "0.1"

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Streaming
async-stream = "0.3"
bytes = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Unix process management
libc = "0.2"
scopeguard = "1.2"

# Config
config = "0.14"

# Glob patterns
glob = "0.3"

# SHA256 for config integrity
sha2 = "0.10"

# Directory paths
dirs = "5.0"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "openclaw-harness"
path = "src/main.rs"
